<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/persona_image"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:id="@+id/layout_persona_mappa"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"/>


            <LinearLayout
                android:id="@+id/layout_persona_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/hint_nome"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/persona_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_persona_cognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/hint_cognome"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/persona_cognome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_persona_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/hint_telefono"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/persona_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_persona_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/hint_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/persona_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>



        </LinearLayout>

            <ImageView
                android:layout_width="@dimen/details_img_width"
                android:layout_height="@dimen/details_img_height"
                android:id="@+id/persona_image"
                android:src="@drawable/person_image_empty"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:padding="4dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_modifica"
            android:id="@+id/persona_modifica"
            android:layout_marginRight="4dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_elimina"
            android:id="@+id/persona_elimina"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>
</RelativeLayout>